feat: added daily income + docs
